--- a/styles/utils/_mixins.scss
+++ b/styles/utils/_mixins.scss
@@ -2,8 +2,3 @@
 	font-size: $font-size;
 	line-height: 1.2;
 }
-
-@mixin radio-btn-after($width, $left) {
-	width: $width;
-	transform: translate($left, -35%);
-}
